--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>My weather application</title>
   </head>
   <body>
@@ -49,7 +49,7 @@
           This project was coded by
           <a href="https://github.com/Ruks-7" target="_blank">Irene Rukwaro</a>
           and is
-          <a href="https://github.com/Ruks-7/First-project" target="_blank">
+          <a href="https://github.com/Ruks-7/Starter-project" target="_blank">
             on GitHub</a
           >
           and
@@ -62,5 +62,5 @@
       </footer>
     </div>
   </body>
-  <script src="src/index.js"></script>
+  <script src="index.js"></script>
 </html>
