updated the netlify link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           >
           and
           <a
-            href="https://6578d5e7ae018d13c2922c4f--starlit-licorice-351cfa.netlify.app/"
+            href="https://6578e56db3de541e1f59a8e1--cozy-kangaroo-2d316a.netlify.app"
             target="_blank"
             >hosted on Netlify</a
           >
